# React_Desktop_App_Hackaton

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
src/DataAnalytics/: .gitignore  Dockerfile  main.py  requirements.txt
src/backend/: Cargo.toml  Dockerfile
src/backend/src/: api_docs.rs  config.rs  error.rs  main.rs
src/backend/src/libs/: mod.rs
src/backend/src/libs/auth/: auth_middleware.rs  check_credentials.rs  create_account.rs  create_token.rs  does_account_exist.rs  mod.rs
src/backend/src/libs/crypto/: compare.rs  hash.rs  mod.rs  rand_string.rs
src/backend/src/libs/db/: get_pool.rs  init_db.rs  init_pool.rs  init_tables.rs  mod.rs  queries.rs
src/backend/src/libs/db/structs/: account.rs  files.rs  mod.rs
src/backend/src/libs/docker/: execute_command.rs  get_containers.rs  get_crashes.rs  get_docker.rs  get_errors.rs  get_raw_containers.rs  get_raw_usage.rs  get_usage.rs  init_docker.rs  mod.rs
src/backend/src/libs/files/: get_file.rs  upload_file.rs
src/backend/src/libs/util/: insure_len.rs  mod.rs
src/backend/src/routes/: mod.rs
src/backend/src/routes/auth/: get_auth_exists.rs  get_auth_validate.rs  login.rs  mod.rs  post_auth_login.rs  post_auth_signup.rs  signup.rs
src/backend/src/routes/docker/: get_docker_containers.rs  mod.rs  socket_docker_crashes.rs  socket_docker_logs.rs  socket_docker_logs_id.rs  socket_docker_usage.rs  socket_docker_usage_raw.rs
src/backend/src/routes/files/: get_files_id.rs  mod.rs  post_files.rs  post_files_id.rs
src/frontend/: Dockerfile  astro.config.mjs  (+7 more)
(+75 files in other folders)
