[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.5.1", features = ["rustls-0_23"] }
argon2 = "0.5.3"
env_logger = "0.11.6"
once_cell = "1.20.2"
rand = "0.8.5"
serde = "1.0.217"
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "chrono" ] }
tokio = { version = "1.43.0", features = ["full"] }
utoipa = "5.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "vendored"] }
infer = "0.19.0"